Uncomment GLM in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ find_package(OpenGL REQUIRED)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
-#find_package(GLM REQUIRED)
-#include_directories(${GLM_INCLUDE_DIRS})
+find_package(GLM REQUIRED)
+include_directories(${GLM_INCLUDE_DIRS})
 
 include_directories("${PROJECT_SOURCE_DIR}/extern/stb")
 
